--- a/index.html
+++ b/index.html
@@ -10,33 +10,9 @@
 
 <body>
     <style>
-        .container {
-            padding: 1rem 4vw;
-        }
-
-        .d-flex {
-            gap: .5rem;
-        }
-
-        .modal {
-            display: none;
-        }
-
-        .form {
-            margin-bottom: 1rem;
-        }
-
-        .page {
-            display: none;
-        }
-
-        .page.active {
-            display: block;
-        }
-
-        canvas {
-            border: 1px solid black;
-        }
+        /* :root {
+            --fz: ;
+        } */
 
         .shadow {
             position: fixed;
@@ -45,34 +21,187 @@
             left: 0;
             right: 0;
             opacity: 1;
-            background-color: #fff;
+            background-color: rgb(65, 55, 55);
         }
+
+        .page,
+        .inner-page {
+            display: none;
+        }
+
+        .page.active,
+        .inner-page.active {
+            display: block;
+        }
+
+        body {
+            font-size: 1vw;
+            overflow: auto;
+        }
+
+        h1 {
+            text-align: center;
+            font-size: max(20px, 3em);
+        }
+
+        label,
+        p {
+            margin: 0;
+            font-size: max(2em, 14px);
+        }
+
+        .continer {
+            margin: 1rem;
+            /* overflow: hidden; */
+        }
+
+        .page-1 {
+            top: 50%;
+            left: 50%;
+            transform: translateX(-50%) translateY(-50%);
+            position: absolute;
+            width: min(75%, 500px);
+        }
+
+        .form-1 {
+            display: grid;
+            gap: .5rem
+        }
+
+        .inner-page-1>div {
+            display: grid;
+        }
+
+        #zoomRange {
+            margin-left: .5rem;
+            font-size: max(2em, 14px);
+            width: 4ch;
+        }
+
+        #cropModal .modal-body> :nth-child(2) {
+            display: flex;
+            flex-direction: column;
+        }
+
+        #cropModal .modal-body> :nth-child(2) label {
+            align-self: baseline;
+        }
+
+        .--canvas {
+            margin: 2rem 0 4rem 0;
+        }
+
+        .canvas {
+            overflow: hidden;
+        }
+
+        .canvas-container {
+            margin: 0 auto;
+        }
+
+        #c,
+        .upper-canvas,
+        .canvas-container {
+            border: 1px solid #000;
+            --width: min(calc(80vw - 2rem), 900px);
+            max-width: var(--width);
+            max-height: calc(var(--width)*4/3);
+            min-width: var(--width);
+            min-height: calc(var(--width)*4/3);
+        }
+
+        .templates {
+            display: flex;
+            overflow-x: auto;
+            gap: 0.5rem;
+            align-items: flex-start;
+            min-height: 80px;
+        }
+
+        .templates img {
+            width: 50px;
+        }
+
+        @media screen and (min-width: 376px) {
+            .templates img {
+                width: 80px;
+            }
+        }
+
+        @media screen and (min-width: 565px) {
+            .templates img {
+                width: 100px;
+            }
+        }
+
+        @media screen and (min-width: 720px) {
+            .templates img {
+                width: 120px;
+            }
+        }
+
+        @media screen and (min-width: 1240px) {
+            
+        }
+        */
     </style>
 
     <!-- ________________________________ -->
 
-    <div class="container ml-4">
-        <section class="page page-1">
-            <h1>Введите номер телефона</h1>
+    <div class="continer">
+
+        <section class="page page-1 active">
+            <h1>Введите ваш номер телефона</h1>
             <label for="form-1-phone">Номер телефона</label>
-            <form class="form form-1 d-flex --column">
-                <input id="form-1-phone" type="tel" name="phone">
-                <input class="nextPage" type="submit">
+            <form class="form form-1">
+                <input id="form-1-phone" type="tel" name="phone" class="form-control">
+                <input class="next-page btn btn-success" type="submit">
             </form>
         </section>
+
         <section class="page page-2">
-            <div class="d-flex">
-                <div class="col col--1">
-                    <h1>Загрузка фото</h1>
-                    <form class="form-2">
-                        <input type="file" id="mainPhotoUpload" class="" name="userfile" accept="image/jpeg, image/png">
-                    </form>
-                </div>
-                <div class="col col--2">
-                    <canvas id="c" width="450" height="600" ></canvas>
-                </div>
+            <h1 class="title">Загрузка фото</h1>
+            <div class="">
+                <section class="inner-page inner-page-1 active">
+                    <div class="">
+                        <button class="btn btn-primary" type="button" onclick="$('#mainPhotoUpload').click()">Загрузить
+                            фото</button>
+                        <form class="form form-2 d-none">
+                            <input type="file" id="mainPhotoUpload" class="" name="userfile"
+                                accept="image/jpeg, image/png">
+                        </form>
+                    </div>
+                </section>
+                <section class="inner-page inner-page-2">
+                    <div class="templates">
+                        <img src="https://lk.infograffer.ru/templates/64/cover.jpg">
+                        <img src="https://lk.infograffer.ru/templates/64/cover.jpg">
+                        <img src="https://lk.infograffer.ru/templates/64/cover.jpg">
+                        <img src="https://lk.infograffer.ru/templates/64/cover.jpg">
+                        <img src="https://lk.infograffer.ru/templates/64/cover.jpg">
+                        <img src="https://lk.infograffer.ru/templates/64/cover.jpg">
+                        <img src="https://lk.infograffer.ru/templates/64/cover.jpg">
+                        <img src="https://lk.infograffer.ru/templates/64/cover.jpg">
+                        <img src="https://lk.infograffer.ru/templates/64/cover.jpg">
+                        <img src="https://lk.infograffer.ru/templates/64/cover.jpg">
+                    </div>
+                </section>
+                <section class="--canvas">
+                    <div class="canvas">
+                        <canvas id="c" width="450" height="600"></canvas>
+                    </div>
+                </section>
             </div>
         </section>
+    </div>
+
+
+
+
+    <div class="modal fade" id="ajaxModal" tabindex="-1" aria-labelledby="ajaxModal" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content"></div>
+        </div>
     </div>
 
     <div class="modal fade show" id="cropModal" tabindex="-1" aria-labelledby="cropModalLabel" aria-hidden="true">
@@ -100,7 +229,27 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
-                    <button type="button" id="button" class="btn btn-primary save-crop-image">Применить</button>
+                    <button type="button" id="button"
+                        class="btn btn-primary save-crop-image next-inner-page">Применить</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="progressModal" tabindex="-1" aria-labelledby="progressModal" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="cropModalLabel">Процесс загрузки фотографий</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                            style="width: 0%"></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -125,7 +274,8 @@
 
     <script>
         let cropImg = document.getElementById('cropImage');
-        let currentPage = 1;
+        let page = 2;
+        let innerPage = 2;
         let x = true;
 
         function loadCss(url, integrity, referrerpolicy = '') {
@@ -141,28 +291,30 @@
                 resolve(!x);
             });
         }
-        loadCss('https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.css','sha512-+VDbDxc9zesADd49pfvz7CgsOl2xREI/7gnzcdyA9XjuTxLXrdpuz21VVIqc5HPfZji2CypSbxx1lgD7BgBK5g==','no-referrer');
+        loadCss('https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.css',
+            'sha512-+VDbDxc9zesADd49pfvz7CgsOl2xREI/7gnzcdyA9XjuTxLXrdpuz21VVIqc5HPfZji2CypSbxx1lgD7BgBK5g==',
+            'no-referrer');
 
-        loadCss('https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css','sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm');
+        loadCss('https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css',
+            'sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm');
 
         $(document).ready(function () {
-            init();
+            openPage('.page', page);
+            openPage('.inner-page', innerPage);
         });
 
-        function init() {
-            openPage(currentPage);
-        }
+        function openPage(selector, number) {
+            console.log('selector: ', selector);
+            console.log('number: ', number);
 
-        function openPage(number) {
             function closeAll() {
-                document.querySelectorAll('section.page.active').forEach(item => {
+                document.querySelectorAll(`${selector}.active`).forEach(item => {
                     item.classList.remove('active');
                 });
             }
             closeAll();
 
-            document.querySelector(`section.page-${number}`).classList.add('active');
-            console.log('currentPage: ', currentPage);
+            document.querySelector(`${selector}-${number}`).classList.add('active');
         }
 
         //Обработка форм
@@ -182,9 +334,15 @@
         });
 
         //переключение страниц
-        document.querySelectorAll('.nextPage').forEach(item => {
+        document.querySelectorAll('.next-page').forEach(item => {
             item.addEventListener('click', function (event) {
-                openPage(currentPage += 1);
+                openPage('.page', page += 1);
+            });
+        });
+
+        document.querySelectorAll('.next-inner-page').forEach(item => {
+            item.addEventListener('click', function (event) {
+                openPage('.inner-page', innerPage += 1);
             });
         });
 
