--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 
                     <div class="tool text" id="toolText">
                         <div class="text-content">
+                            <p>Текст активного элемента:</p>
                             <textarea id="textContent"></textarea>
                         </div>
                         <div>
@@ -165,6 +166,7 @@
                         </div>
 
                         <div class="new-text-container">
+                            <p>Добавить новый текст</p>
                             <textarea id="newTextContent"></textarea>
                             <button type="button" onclick="addText()" class="btn btn-primary">Добавить текст</button>
                         </div>
