--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@
                             img.set({
                                 left: 0,
                                 top: 0,
+                                opacity: 0.2,
                             });
                             canvas.add(img);
 
