--- a/save.html
+++ b/save.html
@@ -554,6 +554,7 @@
                             img.set({
                                 left: 0,
                                 top: 0,
+                                opacity: 0.2,
                             });
                             canvas.add(img);
 
