--- a/save.html
+++ b/save.html
@@ -45,6 +45,7 @@
 
                 <div class="templates">
                     <img data-template-id='1' src="http://stage.infograffer.ru/templates/254/cover.jpg">
+                    <img data-template-id='2' src="http://stage.infograffer.ru/templates/68/cover.jpg">
                     <img data-template-id='3' src="http://stage.infograffer.ru/templates/14/cover.jpg">
                     <img data-template-id='4' src="http://stage.infograffer.ru/templates/62/cover.jpg">
                     <img data-template-id='5' src="http://stage.infograffer.ru/templates/1005/cover.jpg">
