--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
                                 </svg>
                             </button>
 
+                            <button id="image" title="Изображения" class="btn tool-btns__item" type="button">
+                                <p>фото</p>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-card-image" viewBox="0 0 16 16">
+                                    <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+                                    <path d="M1.5 2A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm13 1a.5.5 0 0 1 .5.5v6l-3.775-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12v.54A.505.505 0 0 1 1 12.5v-9a.5.5 0 0 1 .5-.5h13z"/>
+                                </svg>
+                            </button>
+
                             <button title="Сохранить" class="btn tool-btns__item save" type="button" onclick="downloadImage('png')">
                                 <p>сохранить</p>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -247,15 +255,38 @@
                                 </div>
                             </div>
                     </div>
+
+                    <div class="tool image">
+                        <div>
+                            <label for="fileUpload" class="form-label">Загрузите новое изображение</label>
+                            <input type="file" id="fileUpload" class="upload" name="userfile" accept="image/jpeg, image/png, image/gif, image/svg">
+                        </div>
+                        <div class="image-border-circle">
+                            <label for="imageBorderCircle">Круглое изображение</label>
+                            <input type="checkbox" id="imageBorderCircle" value="-1">
+                        </div>
+                    </div>
                 </section>
             </div>
         </section>
+
+        <div class="modal" id="imageCropModal" tabindex="-1">
+            <div class="container">
+                <div class="img-container">
+                    <img id="imageCrop" src="#" width="100%" alt="Picture">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="applyCrop" class="btn" data-dismiss="modal">Применить</button>
+                    <button type="button" class="btn" data-dismiss="modal">Закрыть</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- ________________________________ -->
     <script src="https://unpkg.com/fabric@4.6.0/dist/fabric.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js" integrity="sha512-ooSWpxJsiXe6t4+PPjCgYmVfr1NS5QXJACcR/FPpsdm6kqG1FmQ2SVyg2RXeVuCRBLr0lWHnWJP6Zs1Efvxzww==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js"
         integrity="sha512-v/wOVTkoU7mXEJC3hXnw9AA6v32qzpknvuUF6J2Lbkasxaxn2nYcl+HGB7fr/kChGfCqubVr1n2sq1UFu3Gh1w=="
@@ -433,10 +464,8 @@
 
         function downloadImage(ext) {
             try {
-                if (ext === 'jpeg') {
-                    canvas.backgroundColor = '#ffffff';
-                    canvas.requestRenderAll();
-                }
+                canvas.backgroundColor = '#ffffff';
+                canvas.requestRenderAll();
 
                 $.ajax({
                     url: 'https://stage.infograffer.ru/editor/export/templates/1/sign.png',
